[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/user_interface/robot_button/sprites/robot_life_top.png" type="Texture" id=1]
[ext_resource path="res://GUI/user_interface/robot_button/robot_button.gd" type="Script" id=2]
[ext_resource path="res://GUI/close_icon.png" type="Texture" id=3]
[ext_resource path="res://GUI/close_icon_clicked.png" type="Texture" id=4]
[ext_resource path="res://GUI/user_interface/robot_button/sprites/robot_button.png" type="Texture" id=5]
[ext_resource path="res://GUI/user_interface/robot_button/sprites/robot_life_top_back.png" type="Texture" id=6]
[ext_resource path="res://GUI/user_interface/robot_button/sprites/robot_life_full.png" type="Texture" id=7]

[node name="robot_button" type="Control"]
rect_min_size = Vector2( 150, 35 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 5.0
margin_right = 33.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_button" type="TextureButton" parent="."]
margin_left = 91.0
margin_top = -6.0
margin_right = 138.0
margin_bottom = 42.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energy_bar" type="TextureProgress" parent="."]
margin_left = 39.0
margin_top = 4.0
margin_right = 86.0
margin_bottom = 32.0
step = 33.0
value = 99.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
